r502 | gaser | 2013-09-23 16:41:09

M       vbdist.mexglx
M       vbm_vol_gradient3.c
M       AmapMex.mexa64
M       vbdist.mexa64
M       AmapMex.mexw32
M       vbdist.mexw32
M       vbm_vol_downcut.c
M       sanlmMex_noopenmp.mexglx
M       vbm_vol_eikonal3.c
M       CHANGES.txt
M       sanlmMex.mexglx
M       vbm_vol_laplace3R.c
M       vbm_vol_laplace3.c
M       vbm_vol_interp3f.cpp
M       sanlmMex_noopenmp.mexa64
M       sanlmMex.mexa64
M       AmapMex.mexglx

(1) Modified c/c++ code to allow compiling for linux/windows.
(2) Re-compiling for linux/windows.
------------------------------------------------------------------------
r503 | gaser | 2013-09-24 17:02:27

M       compile.m
M       CHANGES.txt
M       sanlmMex.mexa64

(1) Modified c/c++ code to allow compiling for linux/windows.
(2) Re-compiling for linux/windows.
(3) Changed compile.m to consider new paths for libgomp.a.
------------------------------------------------------------------------
r504 | gaser | 2013-09-24 17:13:33

M       vbm_vol_median3.mexmaci64
M       vbm_vol_gradient3.mexmaci64
M       AmapMex.mexmaci64
M       vbm_vol_downcut.mexmaci64
M       vbm_vol_eikonal3.mexmaci64
M       CHANGES.txt
M       sanlmMex.mexmaci64
M       vbm_vol_laplace3R.mexmaci64
M       vbdist.mexmaci64
M       sanlmMex_noopenmp.mexmaci64
M       vbm_vol_laplace3.mexmaci64
M       cg_vbm_write.m
M       vbm_vol_interp3f.mexmaci64

(1) Removed bug in cg_vbm_writewhere no img-files could be used if 
    SANLM-filter was used and nii-extension was forced.
(2) Re-compiling for macosx.

------------------------------------------------------------------------
r505 | gaser | 2013-09-25 13:04:11

M       cg_vbm_run.m
M       CHANGES.txt
M       cg_vbm_write.m

Many changes to cg_vbm_write and cg_vbm_run to clean up the mess with the
filenames.
------------------------------------------------------------------------
r506 | gaser | 2013-09-25 16:42:06